@@ -99,10 +99,17 @@ struct evhttp_bound_socket {
 };
 
 struct evhttp {
+	TAILQ_ENTRY(evhttp) next;
+
 	TAILQ_HEAD(boundq, evhttp_bound_socket) sockets;
 
 	TAILQ_HEAD(httpcbq, evhttp_cb) callbacks;
         struct evconq connections;
+
+	TAILQ_HEAD(vhostsq, evhttp) virtualhosts;			       
+
+	/* NULL if this server is not a vhost */
+        char *vhost_pattern;
 
         int timeout;
 
