@@ -88,6 +88,7 @@ Changes in current version:
  o reduce system calls for getting current time by caching it.
  o separate signal events from io events; making the code less complex.
  o support for periodic timeouts
+ o support for virtual HTTP hosts.
 	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
